test/libsolidity/syntaxTests/storageLayoutSpecifier/library.sol
library L layout at 0x123 {
    function f() public pure { }
}
// ----
// TypeError 7587: (10-25): Storage layout cannot be specified for abstract contracts or libraries
